# libpam_stubs

./: .travis.sh  .travis.yml  CMakeLists.txt  README.md
include/: config.h.in  pam_stubs.h
src/: pam_generic_stubs.h  pam_get_data.c  pam_get_item.c  pam_get_user.c  pam_set_data.c  pam_set_item.c  pam_strerror.c
